2002-08-14  Maciej Stachowiak  <mjs@apple.com>

        Simplified array handling by using NULL to represent empty cells
	instead of the Undefined object, so we can use calloc, realloc and
	memset instead of loops. Inspired by a suggestion of Darin's.

	* kjs/array_object.cpp:
        (ArrayInstanceImp::ArrayInstanceImp):
        (ArrayInstanceImp::~ArrayInstanceImp):
        (ArrayInstanceImp::get):
        (ArrayInstanceImp::hasProperty):
        (ArrayInstanceImp::deleteProperty):
        (ArrayInstanceImp::setLength):
        (ArrayInstanceImp::mark):

2002-08-14  Maciej Stachowiak  <mjs@apple.com>

        Fix major JavaScript memory leak. run-plt says cvs-base improved
	by 2% and cvs-js-performance improved by 7%. However, this was
	within the possible noise level in each case.
        
	The fix was to store ValueImp *'s in the array instead of Value
	objects, since the Value wrapper will keep a ref and make the
	object immortal.

	* kjs/array_object.cpp:
        (ArrayInstanceImp::ArrayInstanceImp):
        (ArrayInstanceImp::get):
        (ArrayInstanceImp::put):
        (ArrayInstanceImp::hasProperty):
        (ArrayInstanceImp::deleteProperty):
        (ArrayInstanceImp::setLength):
        (ArrayInstanceImp::mark):
        * kjs/array_object.h:

2002-08-13  Maciej Stachowiak  <mjs@apple.com>

	Add the ability to determine the classes of live JavaScript
	objects, to help with leak fixing.

        * kjs/collector.h, kjs/collector.cpp:
        (Collector::liveObjectClasses):

2002-08-13  Maciej Stachowiak  <mjs@apple.com>

	Small speed improvement. 3% faster on cvs-js-performance, no
	measurable change on cvs-static-urls.
	
        * kjs/collector.cpp:
        (Collector::collect): Combine 3 loops over all objects into one,
	to reduce flat time and improve locality of reference.

2002-08-12  Darin Adler  <darin@apple.com>

	Speed improvements. 19% faster on cvs-js-performance, 1% on cvs-static-urls.
