@@ -51,10 +51,10 @@ ArrayInstanceImp::ArrayInstanceImp(const Object &proto, const List &list)
   : ObjectImp(proto)
   , length(list.size())
   , capacity(length)
-  , storage(length ? new (ValueImp *)[length] : 0)
+  , storage(length ? (ValueImp **)malloc(sizeof(ValueImp *) * length) : 0)
 {
   ListIterator it = list.begin();
-  const unsigned l = length;
+  unsigned l = length;
   for (unsigned i = 0; i < l; ++i) {
     storage[i] = (it++).imp();
   }
@@ -62,7 +62,7 @@ ArrayInstanceImp::ArrayInstanceImp(const Object &proto, const List &list)
 
 ArrayInstanceImp::~ArrayInstanceImp()
 {
-  free (storage);
+  free(storage);
 }
 
 Value ArrayInstanceImp::get(ExecState *exec, const UString &propertyName) const
@@ -73,9 +73,10 @@ Value ArrayInstanceImp::get(ExecState *exec, const UString &propertyName) const
   bool ok;
   unsigned index = propertyName.toULong(&ok);
   if (ok) {
-    if (index >= length || storage[index] == NULL)
+    if (index >= length)
       return Undefined();
-    return Value(storage[index]);
+    ValueImp *v = storage[index];
+    return v ? Value(v) : Undefined();
   }
 
   return ObjectImp::get(exec, propertyName);
@@ -83,9 +84,10 @@ Value ArrayInstanceImp::get(ExecState *exec, const UString &propertyName) const
 
 Value ArrayInstanceImp::get(ExecState *exec, unsigned index) const
 {
-  if (index >= length || storage[index] == NULL)
+  if (index >= length)
     return Undefined();
-  return Value(storage[index]);
+  ValueImp *v = storage[index];
+  return v ? Value(v) : Undefined();
 }
 
 // Special implementation of [[Put]] - see ECMA 15.4.5.1
@@ -123,7 +125,8 @@ bool ArrayInstanceImp::hasProperty(ExecState *exec, const UString &propertyName)
   if (ok) {
     if (index >= length)
       return false;
-    return storage[index] != NULL && storage[index]->type() != UndefinedType;
+    ValueImp *v = storage[index];
+    return v && v != UndefinedImp::staticUndefined;
   }
   
   return ObjectImp::hasProperty(exec, propertyName);
@@ -133,7 +136,8 @@ bool ArrayInstanceImp::hasProperty(ExecState *exec, unsigned index) const
 {
   if (index >= length)
     return false;
-  return storage[index] != NULL && storage[index]->type() != UndefinedType;
+  ValueImp *v = storage[index];
+  return v && v != UndefinedImp::staticUndefined;
 }
 
 bool ArrayInstanceImp::deleteProperty(ExecState *exec, const UString &propertyName)
@@ -146,7 +150,7 @@ bool ArrayInstanceImp::deleteProperty(ExecState *exec, const UString &propertyNa
   if (ok) {
     if (index >= length)
       return true;
-    storage[index] = NULL;
+    storage[index] = 0;
     return true;
   }
   
@@ -157,7 +161,7 @@ bool ArrayInstanceImp::deleteProperty(ExecState *exec, unsigned index)
 {
   if (index >= length)
     return true;
-  storage[index] = NULL;
+  storage[index] = 0;
   return true;
 }
 
@@ -178,10 +182,10 @@ void ArrayInstanceImp::setLength(unsigned newLength)
 void ArrayInstanceImp::mark()
 {
   ObjectImp::mark();
-  const unsigned l = length;
+  unsigned l = length;
   for (unsigned i = 0; i < l; ++i) {
     ValueImp *imp = storage[i];
-    if (imp != NULL && !imp->marked())
+    if (imp && !imp->marked())
       imp->mark();
   }
 }
